feat: update JWT expiration settings and enhance token response structure

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,5 +16,10 @@ spring.flyway.user=${spring.datasource.username}
 spring.flyway.password=${spring.datasource.password}
 
 jwt.secret-key=${JWT_SECRET_KEY:}
-jwt.access-token-expiration-in-second=${JWT_ACCESS_TOKEN_EXPIRATION_IN_SECOND:86400}
+jwt.access-token-expiration-in-second=${JWT_ACCESS_TOKEN_EXPIRATION_IN_SECOND:3600}
 jwt.refresh-token-expiration-in-second=${JWT_REFRESH_TOKEN_EXPIRATION_IN_SECOND:604800000}
+
+#------------------------------------- OpenApi Swagger Config -------------------------------------
+springdoc.api-docs.path=/api-docs
+springdoc.swagger-ui.path=/swagger-ui.html
+springdoc.swagger-ui.operationsSorter=method
