feat: api login

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,10 @@
 spring.application.name=task-management-system
 
-spring.datasource.url=jdbc:postgresql://localhost:5433/local_db
-spring.datasource.username=local_user
-spring.datasource.password=local_password
+spring.config.import=optional:file:.env[.properties]
+
+spring.datasource.url=${DB_URL:jdbc:postgresql://localhost:5433/local_db}
+spring.datasource.username=${DB_USERNAME:local_user}
+spring.datasource.password=${DB_PASSWORD:local_password}
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 #--------------- Flyway Configuration ---------------
@@ -12,3 +14,12 @@ spring.flyway.baseline-on-migrate=true
 spring.flyway.url=${spring.datasource.url}
 spring.flyway.user=${spring.datasource.username}
 spring.flyway.password=${spring.datasource.password}
+
+jwt.secret-key=${JWT_SECRET_KEY:}
+jwt.access-token-expiration-in-second=${JWT_ACCESS_TOKEN_EXPIRATION_IN_SECOND:3600}
+jwt.refresh-token-expiration-in-second=${JWT_REFRESH_TOKEN_EXPIRATION_IN_SECOND:604800000}
+
+#------------------------------------- OpenApi Swagger Config -------------------------------------
+springdoc.api-docs.path=/api-docs
+springdoc.swagger-ui.path=/swagger-ui.html
+springdoc.swagger-ui.operationsSorter=method
