feat: implement refresh token functionality with scheduled cleanup

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -23,3 +23,10 @@ jwt.refresh-token-expiration-in-second=${JWT_REFRESH_TOKEN_EXPIRATION_IN_SECOND:
 springdoc.api-docs.path=/api-docs
 springdoc.swagger-ui.path=/swagger-ui.html
 springdoc.swagger-ui.operationsSorter=method
+
+#------------------------------------- Cron job config -------------------------------------
+task.management.system.cron.clean-up-expired-and-revoked-tokens.expression=0 0 2 * * *
+
+#------------------------------------- Refresh token config -------------------------------------
+task.management.system.refresh-token.stale-time-in-days=7
+task.management.system.refresh-token.cleanup-batch-size=100
