--- a/src/main/resources/application-local.properties
+++ b/src/main/resources/application-local.properties
@@ -16,3 +16,8 @@ spring.flyway.password=${spring.datasource.password}
 jwt.secret-key=${JWT_SECRET_KEY}
 jwt.access-token-expiration-in-second=3600
 jwt.refresh-token-expiration-in-second=604800000
+
+#--------------- Hibernate Configuration ---------------
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
